parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    CONTRACT
    DO
    EMIT
    END
    EVENT
    EXTERNAL
    INTERNAL
    OSERROR
    PRINT
    PRIVATE
    PUBLIC
    RETURN
    RETURNS
    SEMICOLON
    THEN
    TYPE_SPECIFIER
    VAR
    VISIBILITY
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement statements
Rule 3     statements -> empty
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> abstract_call
Rule 7     statement -> abstract_function_declaration
Rule 8     statement -> print_statement
Rule 9     statement -> conditionals
Rule 10    statement -> attempt_findout_block
Rule 11    declaration -> mutex type IDENTIFIER EQUAL expression LINEEND
Rule 12    declaration -> mutex type IDENTIFIER LINEEND
Rule 13    assignment -> IDENTIFIER EQUAL expression LINEEND
Rule 14    abstract_call -> HAIL FUNCTIONID LPAREN arguments RPAREN LINEEND
Rule 15    abstract_function_declaration -> ABSTRACT FUNCTIONID LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 16    print_statement -> SCRIBE LPAREN STRING_LITERAL RPAREN LINEEND
Rule 17    print_statement -> SCRIBE LPAREN IDENTIFIER RPAREN LINEEND
Rule 18    print_statement -> SCRIBE LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN LINEEND
Rule 19    print_statement -> SCRIBE LPAREN STRING_LITERAL COMMA IDENTIFIER RPAREN LINEEND
Rule 20    conditionals -> if_statement
Rule 21    conditionals -> for_statement
Rule 22    conditionals -> aslongas_statement
Rule 23    if_statement -> IF expression LBRACE statements RBRACE
Rule 24    if_statement -> IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 25    if_statement -> IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE
Rule 26    if_statement -> IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 27    for_statement -> FOR IDENTIFIER IN RANGE LPAREN arguments RPAREN LBRACE statements RBRACE
Rule 28    for_statement -> FOR IDENTIFIER IN iterables LBRACE statements RBRACE
Rule 29    iterables -> STRING_LITERAL
Rule 30    iterables -> IDENTIFIER
Rule 31    aslongas_statement -> ASLONGAS expression LBRACE statements RBRACE
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression TIMES expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression POWER expression
Rule 38    expression -> expression NOTEQUAL expression
Rule 39    expression -> expression LESSTHAN expression
Rule 40    expression -> expression GREATERTHAN expression
Rule 41    expression -> expression LESSTHANOREQUAL expression
Rule 42    expression -> expression GREATERTHANOREQUAL expression
Rule 43    expression -> expression EQUIVALENT expression
Rule 44    expression -> expression BITWISEAND expression
Rule 45    expression -> expression BITWISEOR expression
Rule 46    expression -> expression BITWISEXOR expression
Rule 47    expression -> expression SHIFTLEFT expression
Rule 48    expression -> expression SHIFTRIGHT expression
Rule 49    expression -> NOT expression
Rule 50    expression -> PLUS expression
Rule 51    expression -> MINUS expression
Rule 52    expression -> BITWISEINVERT expression
Rule 53    expression -> INTEGER
Rule 54    expression -> FLOAT
Rule 55    expression -> IDENTIFIER
Rule 56    expression -> BOOLEAN
Rule 57    expression -> STRING_LITERAL
Rule 58    attempt_findout_block -> attempt_block findout_block
Rule 59    attempt_block -> ATTEMPT LBRACE statements RBRACE
Rule 60    findout_block -> FINDOUT error_type LBRACE statements RBRACE
Rule 61    error_type -> UNBOUNDLOCALERROR
Rule 62    error_type -> TYPEERROR
Rule 63    error_type -> VALUEERROR
Rule 64    error_type -> INDEXERROR
Rule 65    error_type -> KEYERROR
Rule 66    error_type -> EXCEPTION
Rule 67    error_type -> SYNTAXERROR
Rule 68    error_type -> STOPITERATION
Rule 69    error_type -> ARITHMETICERROR
Rule 70    error_type -> FLOATINGPOINTERROR
Rule 71    error_type -> OVERFLOWERROR
Rule 72    error_type -> ZERODIVISIONERROR
Rule 73    error_type -> ASSERTIONERROR
Rule 74    error_type -> ATTRIBUTEERROR
Rule 75    error_type -> BUFFERERROR
Rule 76    error_type -> EOFERROR
Rule 77    error_type -> IMPORTERROR
Rule 78    error_type -> MODULENOTFOUNERROR
Rule 79    error_type -> LOOKUPERROR
Rule 80    error_type -> MEMORYERROR
Rule 81    error_type -> NAMEERROR
Rule 82    error_type -> BLOCKINGIOERROR
Rule 83    error_type -> CHILDPROCESSERROR
Rule 84    error_type -> CONNECTIONERROR
Rule 85    error_type -> BROKENPIPEERROR
Rule 86    error_type -> CONNECTIONABORTEDERROR
Rule 87    error_type -> CONNECTIONREFUSEDERROR
Rule 88    error_type -> CONNECTIONRESETERROR
Rule 89    error_type -> FILEEXISTERROR
Rule 90    error_type -> FILENOTFOUNERROR
Rule 91    error_type -> INTERRUPTEDERROR
Rule 92    error_type -> ISADIRECTORYERROR
Rule 93    error_type -> NOTADIRECTORYERROR
Rule 94    error_type -> PERMISSIONERROR
Rule 95    error_type -> PROCESSLOOKUPERROR
Rule 96    error_type -> TIMEOUTERROR
Rule 97    error_type -> REFERENCEERROR
Rule 98    error_type -> RUNTIMEERROR
Rule 99    error_type -> INDENTATIONERROR
Rule 100   error_type -> TABERROR
Rule 101   error_type -> SYSTEMERROR
Rule 102   error_type -> UNICODEERROR
Rule 103   error_type -> UNICODEENCODEERROR
Rule 104   error_type -> UNICODEDECODEERROR
Rule 105   error_type -> UNICODETRANSLATEERROR
Rule 106   error_type -> WARNING
Rule 107   error_type -> USERWARNING
Rule 108   error_type -> DEPRECATIONWARNING
Rule 109   error_type -> PENDINGDEPRECATIONWARNING
Rule 110   error_type -> SYNTAXWARNING
Rule 111   error_type -> RUNTIMEWARNING
Rule 112   error_type -> FUTUREWARNING
Rule 113   error_type -> IMPORTWARNING
Rule 114   error_type -> UNICODEWARNING
Rule 115   error_type -> BYTESWARNING
Rule 116   error_type -> RESOURCEWARNING
Rule 117   error_type -> KEYBOARDINTERRUPT
Rule 118   parameter -> type IDENTIFIER
Rule 119   parameters -> parameter COMMA parameters
Rule 120   parameters -> parameter
Rule 121   parameters -> empty
Rule 122   arguments -> argument COMMA arguments
Rule 123   arguments -> argument
Rule 124   arguments -> empty
Rule 125   argument -> IDENTIFIER
Rule 126   argument -> expression
Rule 127   mutex -> UNLOCK
Rule 128   mutex -> LOCK
Rule 129   type -> INT_TYPE
Rule 130   type -> FLOAT_TYPE
Rule 131   type -> BOOL_TYPE
Rule 132   type -> STRING_TYPE
Rule 133   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 15
ARITHMETICERROR      : 69
ASLONGAS             : 31
ASSERTIONERROR       : 73
ATTEMPT              : 59
ATTRIBUTEERROR       : 74
BITWISEAND           : 44
BITWISEINVERT        : 52
BITWISEOR            : 45
BITWISEXOR           : 46
BLOCKINGIOERROR      : 82
BOOLEAN              : 56
BOOL_TYPE            : 131
BROKENPIPEERROR      : 85
BUFFERERROR          : 75
BYTESWARNING         : 115
CHILDPROCESSERROR    : 83
COLON                : 
COMMA                : 18 19 119 122
CONNECTIONABORTEDERROR : 86
CONNECTIONERROR      : 84
CONNECTIONREFUSEDERROR : 87
CONNECTIONRESETERROR : 88
CONTRACT             : 
DEPRECATIONWARNING   : 108
DIVIDE               : 36
DO                   : 
ELIF                 : 25 26
ELSE                 : 24 26
EMIT                 : 
END                  : 
EOFERROR             : 76
EQUAL                : 11 13
EQUIVALENT           : 43
EVENT                : 
EXCEPTION            : 66
EXTERNAL             : 
FILEEXISTERROR       : 89
FILENOTFOUNERROR     : 90
FINDOUT              : 60
FLOAT                : 54
FLOATINGPOINTERROR   : 70
FLOAT_TYPE           : 130
FOR                  : 27 28
FUNCTIONID           : 14 15
FUTUREWARNING        : 112
GREATERTHAN          : 40
GREATERTHANOREQUAL   : 42
HAIL                 : 14
IDENTIFIER           : 11 12 13 17 18 18 19 27 28 30 55 118 125
IF                   : 23 24 25 26
IMPORTERROR          : 77
IMPORTWARNING        : 113
IN                   : 27 28
INDENTATIONERROR     : 99
INDEXERROR           : 64
INTEGER              : 53
INTERNAL             : 
INTERRUPTEDERROR     : 91
INT_TYPE             : 129
ISADIRECTORYERROR    : 92
KEYBOARDINTERRUPT    : 117
KEYERROR             : 65
LBRACE               : 15 23 24 24 25 25 26 26 26 27 28 31 59 60
LESSTHAN             : 39
LESSTHANOREQUAL      : 41
LINEEND              : 11 12 13 14 16 17 18 19
LOCK                 : 128
LOOKUPERROR          : 79
LPAREN               : 14 15 16 17 18 19 27 32
MEMORYERROR          : 80
MINUS                : 34 51
MODULENOTFOUNERROR   : 78
NAMEERROR            : 81
NOT                  : 49
NOTADIRECTORYERROR   : 93
NOTEQUAL             : 38
OSERROR              : 
OVERFLOWERROR        : 71
PENDINGDEPRECATIONWARNING : 109
PERMISSIONERROR      : 94
PLUS                 : 33 50
POWER                : 37
PRINT                : 
PRIVATE              : 
PROCESSLOOKUPERROR   : 95
PUBLIC               : 
RANGE                : 27
RBRACE               : 15 23 24 24 25 25 26 26 26 27 28 31 59 60
REFERENCEERROR       : 97
RESOURCEWARNING      : 116
RETURN               : 
RETURNS              : 
RPAREN               : 14 15 16 17 18 19 27 32
RUNTIMEERROR         : 98
RUNTIMEWARNING       : 111
SCRIBE               : 16 17 18 19
SEMICOLON            : 
SHIFTLEFT            : 47
SHIFTRIGHT           : 48
STOPITERATION        : 68
STRING_LITERAL       : 16 19 29 57
STRING_TYPE          : 132
SYNTAXERROR          : 67
SYNTAXWARNING        : 110
SYSTEMERROR          : 101
TABERROR             : 100
THEN                 : 
TIMEOUTERROR         : 96
TIMES                : 35
TYPEERROR            : 62
TYPE_SPECIFIER       : 
UNBOUNDLOCALERROR    : 61
UNICODEDECODEERROR   : 104
UNICODEENCODEERROR   : 103
UNICODEERROR         : 102
UNICODETRANSLATEERROR : 105
UNICODEWARNING       : 114
UNLOCK               : 127
USERWARNING          : 107
VALUEERROR           : 63
VAR                  : 
VISIBILITY           : 
WARNING              : 106
WHILE                : 
ZERODIVISIONERROR    : 72
error                : 

Nonterminals, with rules where they appear

abstract_call        : 6
abstract_function_declaration : 7
argument             : 122 123
arguments            : 14 27 122
aslongas_statement   : 22
assignment           : 5
attempt_block        : 58
attempt_findout_block : 10
conditionals         : 9
declaration          : 4
empty                : 3 121 124
error_type           : 60
expression           : 11 13 23 24 25 25 26 26 31 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 50 51 52 126
findout_block        : 58
for_statement        : 21
if_statement         : 20
iterables            : 28
mutex                : 11 12
parameter            : 119 120
parameters           : 15 119
print_statement      : 8
program              : 0
statement            : 2
statements           : 1 2 15 23 24 24 25 25 26 26 26 27 28 31 59 60
type                 : 11 12 118

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement statements
    (3) statements -> . empty
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . abstract_call
    (7) statement -> . abstract_function_declaration
    (8) statement -> . print_statement
    (9) statement -> . conditionals
    (10) statement -> . attempt_findout_block
    (133) empty -> .
    (11) declaration -> . mutex type IDENTIFIER EQUAL expression LINEEND
    (12) declaration -> . mutex type IDENTIFIER LINEEND
    (13) assignment -> . IDENTIFIER EQUAL expression LINEEND
    (14) abstract_call -> . HAIL FUNCTIONID LPAREN arguments RPAREN LINEEND
    (15) abstract_function_declaration -> . ABSTRACT FUNCTIONID LPAREN parameters RPAREN LBRACE statements RBRACE
    (16) print_statement -> . SCRIBE LPAREN STRING_LITERAL RPAREN LINEEND
    (17) print_statement -> . SCRIBE LPAREN IDENTIFIER RPAREN LINEEND
    (18) print_statement -> . SCRIBE LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN LINEEND
    (19) print_statement -> . SCRIBE LPAREN STRING_LITERAL COMMA IDENTIFIER RPAREN LINEEND
    (20) conditionals -> . if_statement
    (21) conditionals -> . for_statement
    (22) conditionals -> . aslongas_statement
    (58) attempt_findout_block -> . attempt_block findout_block
    (127) mutex -> . UNLOCK
    (128) mutex -> . LOCK
    (23) if_statement -> . IF expression LBRACE statements RBRACE
    (24) if_statement -> . IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (25) if_statement -> . IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE
    (26) if_statement -> . IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (27) for_statement -> . FOR IDENTIFIER IN RANGE LPAREN arguments RPAREN LBRACE statements RBRACE
    (28) for_statement -> . FOR IDENTIFIER IN iterables LBRACE statements RBRACE
    (31) aslongas_statement -> . ASLONGAS expression LBRACE statements RBRACE
    (59) attempt_block -> . ATTEMPT LBRACE statements RBRACE

    $end            reduce using rule 133 (empty -> .)
    IDENTIFIER      shift and go to state 13
    HAIL            shift and go to state 14
    ABSTRACT        shift and go to state 15
    SCRIBE          shift and go to state 16
    UNLOCK          shift and go to state 21
    LOCK            shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    ASLONGAS        shift and go to state 25
    ATTEMPT         shift and go to state 26

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    abstract_call                  shift and go to state 7
    abstract_function_declaration  shift and go to state 8
    print_statement                shift and go to state 9
    conditionals                   shift and go to state 10
    attempt_findout_block          shift and go to state 11
    mutex                          shift and go to state 12
    if_statement                   shift and go to state 17
    for_statement                  shift and go to state 18
    aslongas_statement             shift and go to state 19
    attempt_block                  shift and go to state 20

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement . statements
    (2) statements -> . statement statements
    (3) statements -> . empty
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . abstract_call
    (7) statement -> . abstract_function_declaration
    (8) statement -> . print_statement
    (9) statement -> . conditionals
    (10) statement -> . attempt_findout_block
    (133) empty -> .
    (11) declaration -> . mutex type IDENTIFIER EQUAL expression LINEEND
    (12) declaration -> . mutex type IDENTIFIER LINEEND
    (13) assignment -> . IDENTIFIER EQUAL expression LINEEND
    (14) abstract_call -> . HAIL FUNCTIONID LPAREN arguments RPAREN LINEEND
    (15) abstract_function_declaration -> . ABSTRACT FUNCTIONID LPAREN parameters RPAREN LBRACE statements RBRACE
    (16) print_statement -> . SCRIBE LPAREN STRING_LITERAL RPAREN LINEEND
    (17) print_statement -> . SCRIBE LPAREN IDENTIFIER RPAREN LINEEND
    (18) print_statement -> . SCRIBE LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN LINEEND
    (19) print_statement -> . SCRIBE LPAREN STRING_LITERAL COMMA IDENTIFIER RPAREN LINEEND
    (20) conditionals -> . if_statement
    (21) conditionals -> . for_statement
    (22) conditionals -> . aslongas_statement
    (58) attempt_findout_block -> . attempt_block findout_block
    (127) mutex -> . UNLOCK
    (128) mutex -> . LOCK
    (23) if_statement -> . IF expression LBRACE statements RBRACE
    (24) if_statement -> . IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (25) if_statement -> . IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE
    (26) if_statement -> . IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (27) for_statement -> . FOR IDENTIFIER IN RANGE LPAREN arguments RPAREN LBRACE statements RBRACE
    (28) for_statement -> . FOR IDENTIFIER IN iterables LBRACE statements RBRACE
    (31) aslongas_statement -> . ASLONGAS expression LBRACE statements RBRACE
    (59) attempt_block -> . ATTEMPT LBRACE statements RBRACE

    $end            reduce using rule 133 (empty -> .)
    RBRACE          reduce using rule 133 (empty -> .)
    IDENTIFIER      shift and go to state 13
    HAIL            shift and go to state 14
    ABSTRACT        shift and go to state 15
    SCRIBE          shift and go to state 16
    UNLOCK          shift and go to state 21
    LOCK            shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    ASLONGAS        shift and go to state 25
    ATTEMPT         shift and go to state 26

    statement                      shift and go to state 3
    statements                     shift and go to state 27
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    abstract_call                  shift and go to state 7
    abstract_function_declaration  shift and go to state 8
    print_statement                shift and go to state 9
    conditionals                   shift and go to state 10
    attempt_findout_block          shift and go to state 11
    mutex                          shift and go to state 12
    if_statement                   shift and go to state 17
    for_statement                  shift and go to state 18
    aslongas_statement             shift and go to state 19
    attempt_block                  shift and go to state 20

state 4

    (3) statements -> empty .

    $end            reduce using rule 3 (statements -> empty .)
    RBRACE          reduce using rule 3 (statements -> empty .)


state 5

    (4) statement -> declaration .

    IDENTIFIER      reduce using rule 4 (statement -> declaration .)
    HAIL            reduce using rule 4 (statement -> declaration .)
    ABSTRACT        reduce using rule 4 (statement -> declaration .)
    SCRIBE          reduce using rule 4 (statement -> declaration .)
    UNLOCK          reduce using rule 4 (statement -> declaration .)
    LOCK            reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    ASLONGAS        reduce using rule 4 (statement -> declaration .)
    ATTEMPT         reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 6

    (5) statement -> assignment .

    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    HAIL            reduce using rule 5 (statement -> assignment .)
    ABSTRACT        reduce using rule 5 (statement -> assignment .)
    SCRIBE          reduce using rule 5 (statement -> assignment .)
    UNLOCK          reduce using rule 5 (statement -> assignment .)
    LOCK            reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    ASLONGAS        reduce using rule 5 (statement -> assignment .)
    ATTEMPT         reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 7

    (6) statement -> abstract_call .

    IDENTIFIER      reduce using rule 6 (statement -> abstract_call .)
    HAIL            reduce using rule 6 (statement -> abstract_call .)
    ABSTRACT        reduce using rule 6 (statement -> abstract_call .)
    SCRIBE          reduce using rule 6 (statement -> abstract_call .)
    UNLOCK          reduce using rule 6 (statement -> abstract_call .)
    LOCK            reduce using rule 6 (statement -> abstract_call .)
    IF              reduce using rule 6 (statement -> abstract_call .)
    FOR             reduce using rule 6 (statement -> abstract_call .)
    ASLONGAS        reduce using rule 6 (statement -> abstract_call .)
    ATTEMPT         reduce using rule 6 (statement -> abstract_call .)
    $end            reduce using rule 6 (statement -> abstract_call .)
    RBRACE          reduce using rule 6 (statement -> abstract_call .)


state 8

    (7) statement -> abstract_function_declaration .
